[package]
name = "crawler"
version = "0.1.0"
authors = ["donacrio <donatien.criaud@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
url = "2.1.1"
reqwest = { version = "0.10.4", features = ["blocking"] }
select = "0.4.3"
# openssl needs vendored features for cross compilation
openssl = { version = "0.10", features = ["vendored"] }