[package]
name = "crawler"
version = "0.1.0"
authors = ["donacrio <donatien.criaud@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
dotenv = "0.15"
futures = "0.3"
# We need a vendored version of openssl for cross compilation
openssl = {version = "0.10", features = ["vendored"]}
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
select = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
